book: update ru
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Git-как-клиент.html
+++ b/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Git-как-клиент.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Git-и-другие-системы-контроля-версий-Переход-на-Git
 title: Git - Git как клиент
 url: "/book/ru/v2/Git-и-другие-системы-контроля-версий-Git-как-клиент.html"
+aliases:
+- "/book/ru/Git-и-другие-системы-контроля-версий.html"
+- "/book/ru/v1/Git-и-другие-системы-контроля-версий.html"
+- "/book/ru/Git-и-другие-системы-контроля-версий-Git-и-Subversion.html"
+- "/book/ru/v1/Git-и-другие-системы-контроля-версий-Git-и-Subversion.html"
 ---
 <p>Наш мир несовершенен.
 Как правило, вы не можете быстро перевести свой проект на использование Git.
