--- a/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Заключение.html
+++ b/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Сантехника-и-Фарфор
 title: Git - Заключение
 url: "/book/ru/v2/Git-и-другие-системы-контроля-версий-Заключение.html"
+aliases:
+- "/book/ru/Git-и-другие-системы-контроля-версий-Итоги.html"
+- "/book/ru/v1/Git-и-другие-системы-контроля-версий-Итоги.html"
 ---
 <h2 id="_заключение_14">Заключение</h2>
 <div class="paragraph">
