--- a/external/book/content/book/ru/v2/Git-изнутри-Pack-файлы.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Pack-файлы.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Спецификации-ссылок
 title: Git - Pack-файлы
 url: "/book/ru/v2/Git-изнутри-Pack-файлы.html"
+aliases:
+- "/book/ru/Git-изнутри-Pack-файлы.html"
+- "/book/ru/v1/Git-изнутри-Pack-файлы.html"
 ---
 <h2 id="_pack_файлы">Pack-файлы</h2>
 <div class="paragraph">
