--- a/external/book/content/book/ru/v2/Git-изнутри-Заключение.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Приложение-A:-Git-в-других-окружениях-Графические-интерфейсы
 title: Git - Заключение
 url: "/book/ru/v2/Git-изнутри-Заключение.html"
+aliases:
+- "/book/ru/Git-изнутри-Итоги.html"
+- "/book/ru/v1/Git-изнутри-Итоги.html"
 ---
 <h2 id="_заключение_16">Заключение</h2>
 <div class="paragraph">
