--- a/external/book/content/book/ru/v2/Git-изнутри-Обслуживание-репозитория-и-восстановление-данных.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Обслуживание-репозитория-и-восстановление-данных.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Переменные-окружения
 title: Git - Обслуживание репозитория и восстановление данных
 url: "/book/ru/v2/Git-изнутри-Обслуживание-репозитория-и-восстановление-данных.html"
+aliases:
+- "/book/ru/Git-изнутри-Обслуживание-и-восстановление-данных.html"
+- "/book/ru/v1/Git-изнутри-Обслуживание-и-восстановление-данных.html"
 ---
 <h2 id="_обслуживание_репозитория_и_восстановление_данных">Обслуживание репозитория и восстановление данных</h2>
 <div class="paragraph">
