--- a/external/book/content/book/ru/v2/Git-изнутри-Объекты-Git.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Объекты-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Ссылки-в-Git
 title: Git - Объекты Git
 url: "/book/ru/v2/Git-изнутри-Объекты-Git.html"
+aliases:
+- "/book/ru/Git-изнутри-Объекты-в-Git.html"
+- "/book/ru/v1/Git-изнутри-Объекты-в-Git.html"
 ---
 <h2 id="r_objects">Объекты Git</h2>
 <div class="paragraph">
