--- a/external/book/content/book/ru/v2/Git-изнутри-Сантехника-и-Фарфор.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Сантехника-и-Фарфор.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Git-изнутри-Объекты-Git
 title: Git - Сантехника и Фарфор
 url: "/book/ru/v2/Git-изнутри-Сантехника-и-Фарфор.html"
+aliases:
+- "/book/ru/Git-изнутри.html"
+- "/book/ru/v1/Git-изнутри.html"
+- "/book/ru/Git-изнутри-Сантехника-и-фарфор.html"
+- "/book/ru/v1/Git-изнутри-Сантехника-и-фарфор.html"
 ---
 <p>Вы могли прочитать почти всю книгу перед тем, как приступить к этой главе, а могли только часть — в любом случае в данной главе рассматриваются внутренние процессы Git и особенности его реализации.
 На наш взгляд, изучение этого материала является основой понимания того, насколько Git полезный и мощный инструмент, однако, некоторые утверждают, что изложение этого материала может сбить новичков с толку и оказаться для них неоправданно сложным.
