--- a/external/book/content/book/ru/v2/Git-изнутри-Спецификации-ссылок.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Спецификации-ссылок.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Протоколы-передачи-данных
 title: Git - Спецификации ссылок
 url: "/book/ru/v2/Git-изнутри-Спецификации-ссылок.html"
+aliases:
+- "/book/ru/Git-изнутри-Спецификации-ссылок.html"
+- "/book/ru/v1/Git-изнутри-Спецификации-ссылок.html"
 ---
 <h2 id="r_refspec">Спецификации ссылок</h2>
 <div class="paragraph">
