--- a/external/book/content/book/ru/v2/Git-на-сервере-Git-демон.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Git-демон.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-на-сервере-Умный-HTTP
 title: Git - Git-демон
 url: "/book/ru/v2/Git-на-сервере-Git-демон.html"
+aliases:
+- "/book/ru/Git-на-сервере-Git-демон.html"
+- "/book/ru/v1/Git-на-сервере-Git-демон.html"
 ---
 <h2 id="_git_демон">Git-демон</h2>
 <div class="paragraph">
