--- a/external/book/content/book/ru/v2/Git-на-сервере-Генерация-открытого-SSH-ключа.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Генерация-открытого-SSH-ключа.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-на-сервере-Настраиваем-сервер
 title: Git - Генерация открытого SSH ключа
 url: "/book/ru/v2/Git-на-сервере-Генерация-открытого-SSH-ключа.html"
+aliases:
+- "/book/ru/Git-на-сервере-Создание-открытого-SSH-ключа.html"
+- "/book/ru/v1/Git-на-сервере-Создание-открытого-SSH-ключа.html"
 ---
 <h2 id="r_generate_ssh_key">Генерация открытого SSH ключа</h2>
 <div class="paragraph">
