--- a/external/book/content/book/ru/v2/Git-на-сервере-Заключение.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Распределённый-Git-Распределённый-рабочий-процесс
 title: Git - Заключение
 url: "/book/ru/v2/Git-на-сервере-Заключение.html"
+aliases:
+- "/book/ru/Git-на-сервере-Итоги.html"
+- "/book/ru/v1/Git-на-сервере-Итоги.html"
 ---
 <h2 id="_заключение_4">Заключение</h2>
 <div class="paragraph">
