--- a/external/book/content/book/ru/v2/Git-на-сервере-Протоколы.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Протоколы.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Git-на-сервере-Установка-Git-на-сервер
 title: Git - Протоколы
 url: "/book/ru/v2/Git-на-сервере-Протоколы.html"
+aliases:
+- "/book/ru/Git-на-сервере.html"
+- "/book/ru/v1/Git-на-сервере.html"
+- "/book/ru/Git-на-сервере-Протоколы.html"
+- "/book/ru/v1/Git-на-сервере-Протоколы.html"
 ---
 <p>
 К этому моменту вы уже должны уметь делать большую часть повседневных задач, для которых вы будете использовать Git.
