--- a/external/book/content/book/ru/v2/Введение-Заключение.html
+++ b/external/book/content/book/ru/v2/Введение-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Создание-Git-репозитория
 title: Git - Заключение
 url: "/book/ru/v2/Введение-Заключение.html"
+aliases:
+- "/book/ru/Введение-Итоги.html"
+- "/book/ru/v1/Введение-Итоги.html"
 ---
 <h2 id="_заключение">Заключение</h2>
 <div class="paragraph">
