--- a/external/book/content/book/ru/v2/Введение-Как-получить-помощь?.html
+++ b/external/book/content/book/ru/v2/Введение-Как-получить-помощь?.html
@@ -19,6 +19,8 @@ title: Git - Как получить помощь?
 url: "/book/ru/v2/Введение-Как-получить-помощь?.html"
 aliases:
 - "/book/ru/v2/Введение-Как-получить-помощь.html"
+- "/book/ru/Введение-Как-получить-помощь?.html"
+- "/book/ru/v1/Введение-Как-получить-помощь?.html"
 ---
 <h2 id="r_git_help">Как получить помощь?</h2>
 <div class="paragraph">
