--- a/external/book/content/book/ru/v2/Введение-О-системе-контроля-версий.html
+++ b/external/book/content/book/ru/v2/Введение-О-системе-контроля-версий.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Введение-Краткая-история-Git
 title: Git - О системе контроля версий
 url: "/book/ru/v2/Введение-О-системе-контроля-версий.html"
+aliases:
+- "/book/ru/Введение.html"
+- "/book/ru/v1/Введение.html"
+- "/book/ru/Введение-О-контроле-версий.html"
+- "/book/ru/v1/Введение-О-контроле-версий.html"
 ---
 <p>Эта глава о том, как начать работу с Git.
 Вначале изучим основы систем контроля версий, затем перейдём к тому, как запустить Git на вашей ОС и окончательно настроить для работы.
