--- a/external/book/content/book/ru/v2/Введение-Первоначальная-настройка-Git.html
+++ b/external/book/content/book/ru/v2/Введение-Первоначальная-настройка-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Введение-Как-получить-помощь%3F
 title: Git - Первоначальная настройка Git
 url: "/book/ru/v2/Введение-Первоначальная-настройка-Git.html"
+aliases:
+- "/book/ru/Введение-Первоначальная-настройка-Git.html"
+- "/book/ru/v1/Введение-Первоначальная-настройка-Git.html"
 ---
 <h2 id="r_first_time">Первоначальная настройка Git</h2>
 <div class="paragraph">
