--- a/external/book/content/book/ru/v2/Введение-Что-такое-Git?.html
+++ b/external/book/content/book/ru/v2/Введение-Что-такое-Git?.html
@@ -19,6 +19,8 @@ title: Git - Что такое Git?
 url: "/book/ru/v2/Введение-Что-такое-Git?.html"
 aliases:
 - "/book/ru/v2/Введение-Что-такое-Git.html"
+- "/book/ru/Введение-Основы-Git.html"
+- "/book/ru/v1/Введение-Основы-Git.html"
 ---
 <h2 id="what_is_git_section">Что такое Git?</h2>
 <div class="paragraph">
