--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Заключение.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-на-сервере-Протоколы
 title: Git - Заключение
 url: "/book/ru/v2/Ветвление-в-Git-Заключение.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Итоги.html"
+- "/book/ru/v1/Ветвление-в-Git-Итоги.html"
 ---
 <h2 id="_заключение_3">Заключение</h2>
 <div class="paragraph">
