--- a/external/book/content/book/ru/v2/Ветвление-в-Git-О-ветвлении-в-двух-словах.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-О-ветвлении-в-двух-словах.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Основы-ветвления-и-слияния
 title: Git - О ветвлении в двух словах
 url: "/book/ru/v2/Ветвление-в-Git-О-ветвлении-в-двух-словах.html"
+aliases:
+- "/book/ru/Ветвление-в-Git.html"
+- "/book/ru/v1/Ветвление-в-Git.html"
+- "/book/ru/Ветвление-в-Git-Что-такое-ветка?.html"
+- "/book/ru/v1/Ветвление-в-Git-Что-такое-ветка?.html"
 ---
 <p>
 Почти каждая система контроля версий в той или иной форме поддерживает ветвление.
