--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Основы-ветвления-и-слияния.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Основы-ветвления-и-слияния.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Управление-ветками
 title: Git - Основы ветвления и слияния
 url: "/book/ru/v2/Ветвление-в-Git-Основы-ветвления-и-слияния.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Основы-ветвления-и-слияния.html"
+- "/book/ru/v1/Ветвление-в-Git-Основы-ветвления-и-слияния.html"
 ---
 <h2 id="_основы_ветвления_и_слияния">Основы ветвления и слияния</h2>
 <div class="paragraph">
