--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Перебазирование.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Перебазирование.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Заключение
 title: Git - Перебазирование
 url: "/book/ru/v2/Ветвление-в-Git-Перебазирование.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Перемещение.html"
+- "/book/ru/v1/Ветвление-в-Git-Перемещение.html"
 ---
 <h2 id="r_rebasing">Перебазирование</h2>
 <div class="paragraph">
