--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Работа-с-ветками.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Работа-с-ветками.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Удалённые-ветки
 title: Git - Работа с ветками
 url: "/book/ru/v2/Ветвление-в-Git-Работа-с-ветками.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Приёмы-работы-с-ветками.html"
+- "/book/ru/v1/Ветвление-в-Git-Приёмы-работы-с-ветками.html"
 ---
 <h2 id="_работа_с_ветками">Работа с ветками</h2>
 <div class="paragraph">
