--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Удалённые-ветки.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Удалённые-ветки.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Перебазирование
 title: Git - Удалённые ветки
 url: "/book/ru/v2/Ветвление-в-Git-Удалённые-ветки.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Удалённые-ветки.html"
+- "/book/ru/v1/Ветвление-в-Git-Удалённые-ветки.html"
 ---
 <h2 id="r_remote_branches">Удалённые ветки</h2>
 <div class="paragraph">
