--- a/external/book/content/book/ru/v2/Ветвление-в-Git-Управление-ветками.html
+++ b/external/book/content/book/ru/v2/Ветвление-в-Git-Управление-ветками.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-Работа-с-ветками
 title: Git - Управление ветками
 url: "/book/ru/v2/Ветвление-в-Git-Управление-ветками.html"
+aliases:
+- "/book/ru/Ветвление-в-Git-Управление-ветками.html"
+- "/book/ru/v1/Ветвление-в-Git-Управление-ветками.html"
 ---
 <h2 id="r_branch_management">Управление ветками</h2>
 <div class="paragraph">
