--- a/external/book/content/book/ru/v2/Инструменты-Git-Выбор-ревизии.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Выбор-ревизии.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Инструменты-Git-Интерактивное-индексирование
 title: Git - Выбор ревизии
 url: "/book/ru/v2/Инструменты-Git-Выбор-ревизии.html"
+aliases:
+- "/book/ru/Инструменты-Git.html"
+- "/book/ru/v1/Инструменты-Git.html"
+- "/book/ru/Инструменты-Git-Выбор-ревизии.html"
+- "/book/ru/v1/Инструменты-Git-Выбор-ревизии.html"
 ---
 <p>К этому моменту вы уже изучили большинство повседневных команд и способов организации рабочего процесса, которые необходимы для управления Git репозиторием, используемого для управления вашим исходным кодом.
 Вы выполнили основные задания по отслеживанию и сохранению файлов в Git, вооружились мощью области подготовленных изменений, легковесного ветвления и слияния.</p><p>Теперь настало время познакомиться с некоторыми очень мощными возможностями Git, которые при повседневной работе вам, наверное, не потребуются, но в какой-то момент могут оказаться полезными.</p>
