--- a/external/book/content/book/ru/v2/Инструменты-Git-Заключение.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Настройка-Git-Конфигурация-Git
 title: Git - Заключение
 url: "/book/ru/v2/Инструменты-Git-Заключение.html"
+aliases:
+- "/book/ru/Инструменты-Git-Итоги.html"
+- "/book/ru/v1/Инструменты-Git-Итоги.html"
 ---
 <h2 id="_заключение_10">Заключение</h2>
 <div class="paragraph">
