--- a/external/book/content/book/ru/v2/Инструменты-Git-Интерактивное-индексирование.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Интерактивное-индексирование.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Припрятывание-и-очистка
 title: Git - Интерактивное индексирование
 url: "/book/ru/v2/Инструменты-Git-Интерактивное-индексирование.html"
+aliases:
+- "/book/ru/Инструменты-Git-Интерактивное-индексирование.html"
+- "/book/ru/v1/Инструменты-Git-Интерактивное-индексирование.html"
 ---
 <h2 id="r_interactive_staging">Интерактивное индексирование</h2>
 <div class="paragraph">
