--- a/external/book/content/book/ru/v2/Инструменты-Git-Обнаружение-ошибок-с-помощью-Git.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Обнаружение-ошибок-с-помощью-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Подмодули
 title: Git - Обнаружение ошибок с помощью Git
 url: "/book/ru/v2/Инструменты-Git-Обнаружение-ошибок-с-помощью-Git.html"
+aliases:
+- "/book/ru/Инструменты-Git-Отладка-с-помощью-Git.html"
+- "/book/ru/v1/Инструменты-Git-Отладка-с-помощью-Git.html"
 ---
 <h2 id="_обнаружение_ошибок_с_помощью_git">Обнаружение ошибок с помощью Git</h2>
 <div class="paragraph">
