--- a/external/book/content/book/ru/v2/Инструменты-Git-Перезапись-истории.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Перезапись-истории.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Раскрытие-тайн-reset
 title: Git - Перезапись истории
 url: "/book/ru/v2/Инструменты-Git-Перезапись-истории.html"
+aliases:
+- "/book/ru/Инструменты-Git-Перезапись-истории.html"
+- "/book/ru/v1/Инструменты-Git-Перезапись-истории.html"
 ---
 <h2 id="r_rewriting_history">Перезапись истории</h2>
 <div class="paragraph">
