--- a/external/book/content/book/ru/v2/Инструменты-Git-Припрятывание-и-очистка.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Припрятывание-и-очистка.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Подпись
 title: Git - Припрятывание и очистка
 url: "/book/ru/v2/Инструменты-Git-Припрятывание-и-очистка.html"
+aliases:
+- "/book/ru/Инструменты-Git-Прятанье.html"
+- "/book/ru/v1/Инструменты-Git-Прятанье.html"
 ---
 <h2 id="r_git_stashing">Припрятывание и очистка</h2>
 <div class="paragraph">
