--- a/external/book/content/book/ru/v2/Инструменты-Git-Продвинутое-слияние.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Продвинутое-слияние.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Rerere
 title: Git - Продвинутое слияние
 url: "/book/ru/v2/Инструменты-Git-Продвинутое-слияние.html"
+aliases:
+- "/book/ru/Инструменты-Git-Слияние-поддеревьев.html"
+- "/book/ru/v1/Инструменты-Git-Слияние-поддеревьев.html"
 ---
 <h2 id="r_advanced_merging">Продвинутое слияние</h2>
 <div class="paragraph">
