--- a/external/book/content/book/ru/v2/Настройка-Git-Атрибуты-Git.html
+++ b/external/book/content/book/ru/v2/Настройка-Git-Атрибуты-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Настройка-Git-Хуки-в-Git
 title: Git - Атрибуты Git
 url: "/book/ru/v2/Настройка-Git-Атрибуты-Git.html"
+aliases:
+- "/book/ru/Настройка-Git-Git-атрибуты.html"
+- "/book/ru/v1/Настройка-Git-Git-атрибуты.html"
 ---
 <h2 id="_атрибуты_git">Атрибуты Git</h2>
 <div class="paragraph">
