--- a/external/book/content/book/ru/v2/Настройка-Git-Заключение.html
+++ b/external/book/content/book/ru/v2/Настройка-Git-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-и-другие-системы-контроля-версий-Git-как-клиент
 title: Git - Заключение
 url: "/book/ru/v2/Настройка-Git-Заключение.html"
+aliases:
+- "/book/ru/Настройка-Git-Итоги.html"
+- "/book/ru/v1/Настройка-Git-Итоги.html"
 ---
 <h2 id="_заключение_11">Заключение</h2>
 <div class="paragraph">
