--- a/external/book/content/book/ru/v2/Настройка-Git-Конфигурация-Git.html
+++ b/external/book/content/book/ru/v2/Настройка-Git-Конфигурация-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Настройка-Git-Атрибуты-Git
 title: Git - Конфигурация Git
 url: "/book/ru/v2/Настройка-Git-Конфигурация-Git.html"
+aliases:
+- "/book/ru/Настройка-Git.html"
+- "/book/ru/v1/Настройка-Git.html"
+- "/book/ru/Настройка-Git-Конфигурирование-Git.html"
+- "/book/ru/v1/Настройка-Git-Конфигурирование-Git.html"
 ---
 <p>До этого момента мы описывали основы того, как Git работает и как его использовать, а так же мы познакомились с некоторыми инструментами Git, которые делают его использование простым и эффективным.
 В этой главе мы рассмотрим некоторые настройки Git и систему хуков, что позволяет настроить поведение Git.
