--- a/external/book/content/book/ru/v2/Основы-Git-Заключение.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Ветвление-в-Git-О-ветвлении-в-двух-словах
 title: Git - Заключение
 url: "/book/ru/v2/Основы-Git-Заключение.html"
+aliases:
+- "/book/ru/Основы-Git-Итоги.html"
+- "/book/ru/v1/Основы-Git-Итоги.html"
 ---
 <h2 id="_заключение_2">Заключение</h2>
 <div class="paragraph">
