--- a/external/book/content/book/ru/v2/Основы-Git-Запись-изменений-в-репозиторий.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Запись-изменений-в-репозиторий.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Просмотр-истории-коммитов
 title: Git - Запись изменений в репозиторий
 url: "/book/ru/v2/Основы-Git-Запись-изменений-в-репозиторий.html"
+aliases:
+- "/book/ru/Основы-Git-Запись-изменений-в-репозиторий.html"
+- "/book/ru/v1/Основы-Git-Запись-изменений-в-репозиторий.html"
 ---
 <h2 id="_запись_изменений_в_репозиторий">Запись изменений в репозиторий</h2>
 <div class="paragraph">
