--- a/external/book/content/book/ru/v2/Основы-Git-Работа-с-удалёнными-репозиториями.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Работа-с-удалёнными-репозиториями.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Работа-с-тегами
 title: Git - Работа с удалёнными репозиториями
 url: "/book/ru/v2/Основы-Git-Работа-с-удалёнными-репозиториями.html"
+aliases:
+- "/book/ru/Основы-Git-Работа-с-удалёнными-репозиториями.html"
+- "/book/ru/v1/Основы-Git-Работа-с-удалёнными-репозиториями.html"
 ---
 <h2 id="r_remote_repos">Работа с удалёнными репозиториями</h2>
 <div class="paragraph">
