--- a/external/book/content/book/ru/v2/Основы-Git-Создание-Git-репозитория.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Создание-Git-репозитория.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Основы-Git-Запись-изменений-в-репозиторий
 title: Git - Создание Git-репозитория
 url: "/book/ru/v2/Основы-Git-Создание-Git-репозитория.html"
+aliases:
+- "/book/ru/Основы-Git.html"
+- "/book/ru/v1/Основы-Git.html"
+- "/book/ru/Основы-Git-Создание-Git-репозитория.html"
+- "/book/ru/v1/Основы-Git-Создание-Git-репозитория.html"
 ---
 <p>Если вы хотите начать работать с Git, прочитав всего одну главу, то эта глава — то, что вам нужно.
 Здесь рассмотрены все базовые команды, необходимые вам для решения подавляющего большинства задач, возникающих при работе с Git.
