--- a/external/book/content/book/ru/v2/Приложение-C:-Команды-Git-Настройка-и-конфигурация.html
+++ b/external/book/content/book/ru/v2/Приложение-C:-Команды-Git-Настройка-и-конфигурация.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Приложение-C:-Команды-Git-Клонирование-и-создание-репозиториев
 title: Git - Настройка и конфигурация
 url: "/book/ru/v2/Приложение-C:-Команды-Git-Настройка-и-конфигурация.html"
+aliases:
+- "/book/ru/commands.html"
+- "/book/ru/v1/commands.html"
 ---
 <p>В этой книге было показано больше десятка различных команд Git и мы приложили много усилий, чтобы рассказать вам о них, выстроив некий логический порядок, постепенно внедряя команды в сюжет.
 Но такой подход «размазал» описания команд по всей книге.</p><p>В этом приложении мы пройдёмся по всем командам, о которых шла речь, и сгруппируем их по смыслу.
