--- a/external/book/content/book/ru/v2/Распределённый-Git-Заключение.html
+++ b/external/book/content/book/ru/v2/Распределённый-Git-Заключение.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/GitHub-Настройка-и-конфигурация-учётной-записи
 title: Git - Заключение
 url: "/book/ru/v2/Распределённый-Git-Заключение.html"
+aliases:
+- "/book/ru/Распределённый-Git-Итоги.html"
+- "/book/ru/v1/Распределённый-Git-Итоги.html"
 ---
 <h2 id="_заключение_7">Заключение</h2>
 <div class="paragraph">
