--- a/external/book/content/book/ru/v2/Распределённый-Git-Распределённый-рабочий-процесс.html
+++ b/external/book/content/book/ru/v2/Распределённый-Git-Распределённый-рабочий-процесс.html
@@ -17,6 +17,11 @@ book:
     next: book/ru/v2/Распределённый-Git-Участие-в-проекте
 title: Git - Распределённый рабочий процесс
 url: "/book/ru/v2/Распределённый-Git-Распределённый-рабочий-процесс.html"
+aliases:
+- "/book/ru/Распределённый-Git.html"
+- "/book/ru/v1/Распределённый-Git.html"
+- "/book/ru/Распределённый-Git-Распределённые-рабочие-процессы.html"
+- "/book/ru/v1/Распределённый-Git-Распределённые-рабочие-процессы.html"
 ---
 <p>
 Теперь, когда вы обзавелись настроенным удалённым Git-репозиторием, т. е. местом, где разработчики могут обмениваться своим кодом, а также познакомились с основными командами Git для локальной работы, мы рассмотрим, как задействовать некоторые распределённые рабочие процессы, предлагаемые Git.</p><p>В этой главе мы рассмотрим работу с Git в распределённой среде как в роли рядового разработчика, так и в роли системного интегратора.
