--- a/external/book/content/book/ru/v2/Распределённый-Git-Сопровождение-проекта.html
+++ b/external/book/content/book/ru/v2/Распределённый-Git-Сопровождение-проекта.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Распределённый-Git-Заключение
 title: Git - Сопровождение проекта
 url: "/book/ru/v2/Распределённый-Git-Сопровождение-проекта.html"
+aliases:
+- "/book/ru/Распределённый-Git-Сопровождение-проекта.html"
+- "/book/ru/v1/Распределённый-Git-Сопровождение-проекта.html"
 ---
 <h2 id="_сопровождение_проекта">Сопровождение проекта</h2>
 <div class="paragraph">
