--- a/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Переход-на-Git.html
+++ b/external/book/content/book/ru/v2/Git-и-другие-системы-контроля-версий-Переход-на-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-и-другие-системы-контроля-версий-Заключение
 title: Git - Переход на Git
 url: "/book/ru/v2/Git-и-другие-системы-контроля-версий-Переход-на-Git.html"
+aliases:
+- "/book/ru/Git-и-другие-системы-контроля-версий-Миграция-на-Git.html"
+- "/book/ru/v1/Git-и-другие-системы-контроля-версий-Миграция-на-Git.html"
 ---
 <h2 id="r_migrating">Переход на Git</h2>
 <div class="paragraph">
