--- a/external/book/content/book/ru/v2/Git-изнутри-Протоколы-передачи-данных.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Протоколы-передачи-данных.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Обслуживание-репозитория-и-восстановление-данных
 title: Git - Протоколы передачи данных
 url: "/book/ru/v2/Git-изнутри-Протоколы-передачи-данных.html"
+aliases:
+- "/book/ru/Git-изнутри-Протоколы-передачи.html"
+- "/book/ru/v1/Git-изнутри-Протоколы-передачи.html"
 ---
 <h2 id="_протоколы_передачи_данных">Протоколы передачи данных</h2>
 <div class="paragraph">
