--- a/external/book/content/book/ru/v2/Git-изнутри-Ссылки-в-Git.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Ссылки-в-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-изнутри-Pack-файлы
 title: Git - Ссылки в Git
 url: "/book/ru/v2/Git-изнутри-Ссылки-в-Git.html"
+aliases:
+- "/book/ru/Git-изнутри-Ссылки-в-Git.html"
+- "/book/ru/v1/Git-изнутри-Ссылки-в-Git.html"
 ---
 <h2 id="r_git_refs">Ссылки в Git</h2>
 <div class="paragraph">
