--- a/external/book/content/book/ru/v2/Git-на-сервере-Git-хостинг.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Git-хостинг.html
@@ -17,6 +17,17 @@ book:
     next: book/ru/v2/Git-на-сервере-Заключение
 title: Git - Git-хостинг
 url: "/book/ru/v2/Git-на-сервере-Git-хостинг.html"
+aliases:
+- "/book/ru/Git-на-сервере-Открытый-доступ.html"
+- "/book/ru/v1/Git-на-сервере-Открытый-доступ.html"
+- "/book/ru/Git-на-сервере-GitWeb.html"
+- "/book/ru/v1/Git-на-сервере-GitWeb.html"
+- "/book/ru/Git-на-сервере-Gitosis.html"
+- "/book/ru/v1/Git-на-сервере-Gitosis.html"
+- "/book/ru/Git-на-сервере-Gitolite.html"
+- "/book/ru/v1/Git-на-сервере-Gitolite.html"
+- "/book/ru/Git-на-сервере-Git-хостинг.html"
+- "/book/ru/v1/Git-на-сервере-Git-хостинг.html"
 ---
 <h2 id="_git_хостинг">Git-хостинг</h2>
 <div class="paragraph">
