--- a/external/book/content/book/ru/v2/Git-на-сервере-Настраиваем-сервер.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Настраиваем-сервер.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-на-сервере-Git-демон
 title: Git - Настраиваем сервер
 url: "/book/ru/v2/Git-на-сервере-Настраиваем-сервер.html"
+aliases:
+- "/book/ru/Git-на-сервере-Настраиваем-сервер.html"
+- "/book/ru/v1/Git-на-сервере-Настраиваем-сервер.html"
 ---
 <h2 id="r_setting_up_server">Настраиваем сервер</h2>
 <div class="paragraph">
