--- a/external/book/content/book/ru/v2/Git-на-сервере-Установка-Git-на-сервер.html
+++ b/external/book/content/book/ru/v2/Git-на-сервере-Установка-Git-на-сервер.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Git-на-сервере-Генерация-открытого-SSH-ключа
 title: Git - Установка Git на сервер
 url: "/book/ru/v2/Git-на-сервере-Установка-Git-на-сервер.html"
+aliases:
+- "/book/ru/Git-на-сервере-Настройка-Git-на-сервере.html"
+- "/book/ru/v1/Git-на-сервере-Настройка-Git-на-сервере.html"
 ---
 <h2 id="r_git_on_the_server">Установка Git на сервер</h2>
 <div class="paragraph">
