--- a/external/book/content/book/ru/v2/_index.html
+++ b/external/book/content/book/ru/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/ru/v2.html"
 aliases:
 - "/book/ru/v2/index.html"
+- "/book/ru/v1/index.html"
 - "/book/ru/index.html"
 ---
