--- a/external/book/content/book/ru/v2/Введение-Краткая-история-Git.html
+++ b/external/book/content/book/ru/v2/Введение-Краткая-история-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Введение-Что-такое-Git%3F
 title: Git - Краткая история Git
 url: "/book/ru/v2/Введение-Краткая-история-Git.html"
+aliases:
+- "/book/ru/Введение-Краткая-история-Git.html"
+- "/book/ru/v1/Введение-Краткая-история-Git.html"
 ---
 <h2 id="_краткая_история_git">Краткая история Git</h2>
 <div class="paragraph">
