--- a/external/book/content/book/ru/v2/Введение-Установка-Git.html
+++ b/external/book/content/book/ru/v2/Введение-Установка-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Введение-Первоначальная-настройка-Git
 title: Git - Установка Git
 url: "/book/ru/v2/Введение-Установка-Git.html"
+aliases:
+- "/book/ru/Введение-Установка-Git.html"
+- "/book/ru/v1/Введение-Установка-Git.html"
 ---
 <h2 id="_установка_git">Установка Git</h2>
 <div class="paragraph">
