--- a/external/book/content/book/ru/v2/Инструменты-Git-Подмодули.html
+++ b/external/book/content/book/ru/v2/Инструменты-Git-Подмодули.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Инструменты-Git-Создание-пакетов
 title: Git - Подмодули
 url: "/book/ru/v2/Инструменты-Git-Подмодули.html"
+aliases:
+- "/book/ru/Инструменты-Git-Подмодули.html"
+- "/book/ru/v1/Инструменты-Git-Подмодули.html"
 ---
 <h2 id="r_git_submodules">Подмодули</h2>
 <div class="paragraph">
