--- a/external/book/content/book/ru/v2/Настройка-Git-Пример-принудительной-политики-Git.html
+++ b/external/book/content/book/ru/v2/Настройка-Git-Пример-принудительной-политики-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Настройка-Git-Заключение
 title: Git - Пример принудительной политики Git
 url: "/book/ru/v2/Настройка-Git-Пример-принудительной-политики-Git.html"
+aliases:
+- "/book/ru/Настройка-Git-Пример-навязывания-политики-с-помощью-Git.html"
+- "/book/ru/v1/Настройка-Git-Пример-навязывания-политики-с-помощью-Git.html"
 ---
 <h2 id="r_an_example_git_enforced_policy">Пример принудительной политики Git</h2>
 <div class="paragraph">
