--- a/external/book/content/book/ru/v2/Настройка-Git-Хуки-в-Git.html
+++ b/external/book/content/book/ru/v2/Настройка-Git-Хуки-в-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Настройка-Git-Пример-принудительной-политики-Git
 title: Git - Хуки в Git
 url: "/book/ru/v2/Настройка-Git-Хуки-в-Git.html"
+aliases:
+- "/book/ru/Настройка-Git-Перехватчики-в-Git.html"
+- "/book/ru/v1/Настройка-Git-Перехватчики-в-Git.html"
 ---
 <h2 id="r_git_hooks">Хуки в Git</h2>
 <div class="paragraph">
