--- a/external/book/content/book/ru/v2/Основы-Git-Операции-отмены.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Операции-отмены.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Работа-с-удалёнными-репозиториями
 title: Git - Операции отмены
 url: "/book/ru/v2/Основы-Git-Операции-отмены.html"
+aliases:
+- "/book/ru/Основы-Git-Отмена-изменений.html"
+- "/book/ru/v1/Основы-Git-Отмена-изменений.html"
 ---
 <h2 id="r_undoing">Операции отмены</h2>
 <div class="paragraph">
