--- a/external/book/content/book/ru/v2/Основы-Git-Просмотр-истории-коммитов.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Просмотр-истории-коммитов.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Операции-отмены
 title: Git - Просмотр истории коммитов
 url: "/book/ru/v2/Основы-Git-Просмотр-истории-коммитов.html"
+aliases:
+- "/book/ru/Основы-Git-Просмотр-истории-коммитов.html"
+- "/book/ru/v1/Основы-Git-Просмотр-истории-коммитов.html"
 ---
 <h2 id="r_viewing_history">Просмотр истории коммитов</h2>
 <div class="paragraph">
