--- a/external/book/content/book/ru/v2/Основы-Git-Псевдонимы-в-Git.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Псевдонимы-в-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Заключение
 title: Git - Псевдонимы в Git
 url: "/book/ru/v2/Основы-Git-Псевдонимы-в-Git.html"
+aliases:
+- "/book/ru/Основы-Git-Полезные-советы.html"
+- "/book/ru/v1/Основы-Git-Полезные-советы.html"
 ---
 <h2 id="r_git_aliases">Псевдонимы в Git</h2>
 <div class="paragraph">
