--- a/external/book/content/book/ru/v2/Основы-Git-Работа-с-тегами.html
+++ b/external/book/content/book/ru/v2/Основы-Git-Работа-с-тегами.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Основы-Git-Псевдонимы-в-Git
 title: Git - Работа с тегами
 url: "/book/ru/v2/Основы-Git-Работа-с-тегами.html"
+aliases:
+- "/book/ru/Основы-Git-Работа-с-метками.html"
+- "/book/ru/v1/Основы-Git-Работа-с-метками.html"
 ---
 <h2 id="r_git_tagging">Работа с тегами</h2>
 <div class="paragraph">
