--- a/external/book/content/book/ru/v2/Распределённый-Git-Участие-в-проекте.html
+++ b/external/book/content/book/ru/v2/Распределённый-Git-Участие-в-проекте.html
@@ -17,6 +17,9 @@ book:
     next: book/ru/v2/Распределённый-Git-Сопровождение-проекта
 title: Git - Участие в проекте
 url: "/book/ru/v2/Распределённый-Git-Участие-в-проекте.html"
+aliases:
+- "/book/ru/Распределённый-Git-Содействие-проекту.html"
+- "/book/ru/v1/Распределённый-Git-Содействие-проекту.html"
 ---
 <h2 id="r_contributing_project">Участие в проекте</h2>
 <div class="paragraph">
