book: update fa
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/fa/v2/_index.html
+++ b/external/book/content/book/fa/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/fa/v2.html"
 aliases:
 - "/book/fa/v2/index.html"
+- "/book/fa/v1/index.html"
 - "/book/fa/index.html"
 ---
